# codepilot

./: .env.example  .gitignore  README.md  pyproject.toml
.codepilot/: repo_map.json
codepilot/: agent.py  agent_context.py  cli.py  config.py  context.py  llm.py  repo_map.py  session.py
codepilot/prompts/: edit.md
codepilot/tools/: filesystem.py  git.py  patch.py  registry.py  search.py  shell.py
tests/: test_agent.py  test_context.py  test_filesystem.py  test_patch.py  test_registry.py  test_session.py  test_shell.py
