[project]
name = "codepilot-cli"
version = "0.1.0"
description = "A lightweight coding agent CLI for local repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "python-dotenv",
    "httpx",
    "openai",
]

[project.scripts]
codepilot = "codepilot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
